# tralivali

./: .env.example  .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT_STATUS.md  README.md  SECURITY.md  TelegramLite.slnx  docker-compose.yml  setup.ps1  setup.sh
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  Tralivali.slnx
backend/Tralivali.API/: Program.cs  Tralivali.API.csproj  Tralivali.API.http  appsettings.Production.json  appsettings.json
backend/Tralivali.API/Controllers/: AuthController.cs  InvitesController.cs  MessagesController.cs
backend/Tralivali.API/DTOs/: Requests.cs
backend/Tralivali.Core/: Class1.cs  Tralivali.Core.csproj
backend/Tralivali.Core/Models/: Conversation.cs  Invite.cs  Message.cs  User.cs
backend/Tralivali.Infrastructure/: Class1.cs  Tralivali.Infrastructure.csproj
backend/Tralivali.Infrastructure/Configuration/: AppSettings.cs
backend/Tralivali.Infrastructure/Services/: MongoDbContext.cs  RabbitMqService.cs
docs/: ARCHITECTURE.md  AZURE_DEPLOYMENT.md  FAQ.md  QUICK_START.md
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.tsx
ios/: Cargo.toml
src/TelegramLite.Api/: Program.cs  TelegramLite.Api.csproj  TelegramLite.Api.http  appsettings.json
src/TelegramLite.Auth/: Class1.cs
src/TelegramLite.Infrastructure/: Class1.cs  TelegramLite.Infrastructure.csproj
src/TelegramLite.Messaging/: Class1.cs
src/TelegramLite.Workers/: Class1.cs  TelegramLite.Workers.csproj
tests/TelegramLite.Tests/: TelegramLite.Tests.csproj  UnitTest1.cs
(+26 files in other folders)
