[package]
name = "tralivali-ios"
version = "0.1.0"
edition = "2021"
description = "Tralivali iOS app built with Tauri 2.0"
authors = ["Tralivali Team"]
license = "MIT"

[dependencies]
tauri = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tauri-build = { version = "2.1", features = [] }
